# logos-storage-app-skeleton

./: .gitignore  README.md  flake.nix
app/: CMakeLists.txt  logos_manager.h  main.cpp  metadata.json
cli/: CMakeLists.txt  downloader.cpp  logos_manager.cpp  logos_manager.h  main.cpp  uploader.cpp
nix/: app.nix  cli.nix  default.nix
